2003-05-11  John Levon  <levon@movementarian.org>

	* libpp/format_output.cpp:
	* libpp/format_flags.h: better output for
	the default of short filenames

2003-05-11  John Levon  <levon@movementarian.org>

	* pp/opreport.cpp: improve the app/image name column
	showing a bit

2003-05-11  John Levon  <levon@movementarian.org>

	* pp/opreport.cpp: default to -l if we were just
	going to show one image summary.

2003-05-11  John Levon  <levon@movementarian.org>

	* pp/opreport.cpp: move some code around that
	outputs the image summaries

2003-05-11  John Levon  <levon@movementarian.org>

	* libpp/format_output.h:
	* libpp/format_output.cpp:
	* pp/opreport.cpp:
	* pp/opreport_options.h:
	* pp/opreport_options.cpp: s/--short-filename/--long-filenames/

2003-05-11  John Levon  <levon@movementarian.org>

	* libpp/profile_spec.h:
	* libpp/profile_spec.cpp: take exclude_dependent not
	include_dependent

	* pp/opannotate_options.c:
	* pp/opgprof_options.c:
	* pp/opreport_options.h:
	* pp/opreport_options.c: change to use exclude_dependent,
	remove --hide-dependent

2003-05-11  John Levon  <levon@movementarian.org>

	* locate_images.h:
	* locate_images.cpp: extra_images can now use
	relative paths for its search dirs. Move most of 
	the warnings out of find_image_path, and make it
	also handle relative paths. Return the file
	even if it wasn't readable.

	* libpp/partition_files.cpp: give warnings when
	necessary.

	* libpp/profile_spec.h:
	* libpp/profile_spec.cpp: handle relative paths
	inside image specs, as stated in pp_interface; also
	use the extra images search path for resolution.

	* pp/opannotate_options.cpp:
	* pp/opreport_options.cpp:
	* pp/opgprof_options.cpp: changes from above

2003-05-11  John Levon  <levon@movementarian.org>

	* libpp/format_flags.h: source doc improvements

2003-05-11  John Levon  <levon@movementarian.org>

	* libpp/opp_symbol.h: move vma64_p to ...

	* libpp/format_flags.h: ... here

2003-05-11  John Levon  <levon@movementarian.org>
