@@ -20,41 +20,41 @@
  * \sa formatter
  */
 enum format_flags {
-	osf_none = 0,
+	ff_none = 0,
 	/// a formatted memory address
-	osf_vma = 1 << 0,
+	ff_vma = 1 << 0,
 	/// number of samples
-	osf_nr_samples = 1 << 1,
+	ff_nr_samples = 1 << 1,
 	/// number of samples accumulated
-	osf_nr_samples_cumulated = 1 << 2,
+	ff_nr_samples_cumulated = 1 << 2,
 	/// relative percentage of samples
-	osf_percent = 1 << 3,
+	ff_percent = 1 << 3,
 	/// relative percentage of samples accumulated
-	osf_percent_cumulated = 1 << 4,
+	ff_percent_cumulated = 1 << 4,
 	/// output debug filename and line nr.
-	osf_linenr_info = 1 << 5,
+	ff_linenr_info = 1 << 5,
 	/// output the image name for this line
-	osf_image_name = 1 << 6,
+	ff_image_name = 1 << 6,
 	/// output owning application name
-	osf_app_name = 1 << 7,
+	ff_app_name = 1 << 7,
 	/// output the (demangled) symbol name
-	osf_symb_name = 1 << 8,
+	ff_symb_name = 1 << 8,
 	/**
 	 * Output percentage for details, not relative
 	 * to symbol but relative to the total nr of samples
 	 */
-	osf_percent_details = 1 << 9,
+	ff_percent_details = 1 << 9,
 	/**
 	 * Output percentage for details, not relative
 	 * to symbol but relative to the total nr of samples,
 	 * accumulated
 	 */
-	osf_percent_cumulated_details = 1 << 10,
+	ff_percent_cumulated_details = 1 << 10,
 
 	/// These fields are considered immutable when showing details for one
 	/// symbol, we show them only when outputting the symbol itself but
 	/// we don't display them in the details output line
-	osf_immutable_field = osf_symb_name + osf_image_name + osf_app_name
+	ff_immutable_field = ff_symb_name + ff_image_name + ff_app_name
 };
 
 
