@@ -1,3 +1,9 @@
+2003-05-12  John Levon  <levon@movementarian.org>
+
+	* libpp/format_output.cpp:
+	* libpp/format_flags.h:
+	* pp/opreport.cpp: trivial renaming of flags
+
 2003-05-11  John Levon  <levon@movementarian.org>
 
 	* libpp/format_output.cpp:
